<?xml version="1.0"?>
<package format="2">
  <name>rm_ep_description</name>
  <version>0.1.0</version>
  <description>RoboMaster EP 机器人 URDF 模型</description>
  <maintainer email="user@example.com">user</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>urdf</depend>
  <depend>xacro</depend>
  <depend>robot_state_publisher</depend>
  <depend>joint_state_publisher_gui</depend>

  <export>
  </export>
</package>
