<?xml version="1.0"?>
<package format="2">
  <name>rm_ep_driver</name>
  <version>0.1.0</version>
  <description>RoboMaster EP ROS驱动节点，封装DJI RoboMaster SDK，提供里程计/IMU数据并接收速度指令</description>
  <maintainer email="user@example.com">user</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>rospy</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>tf2_ros</depend>
  <depend>std_msgs</depend>
  <depend>std_srvs</depend>
  <exec_depend>python3-serial</exec_depend>

  <export>
  </export>
</package>
